# Synchro

./: README.md
START_GUIDE/: START_GUIDE.md
project/: Cargo.toml
project/src/: config.rs  main.rs  simulate.rs  utils.rs
project/src/core/: intervals.rs  mod.rs  observations.rs  predicates.rs
project/src/core/interpreter/: regions.rs
project/src/real_world/: config.rs  mod.rs
project/src/real_world/square/: mod.rs  polling.rs  record.rs
project/src/simulation/: config.rs  driver.rs  mod.rs  model.rs
project/src/simulation/network/: mod.rs
project/src/simulation/polling/: config.rs
project/src/simulation/polling/safe/: mod.rs
project/src/simulation/polling/unsafe/: interface.rs  mod.rs
project/src/simulation/record/: interface.rs  messages.rs
project/src/simulation/user/: mod.rs
scenarios/2_polling/: SAFE_1000_BOTH_ALLMUT.json  SAFE_100_0_ALLMUT.json  SAFE_100_10_ALL.json  SAFE_100_10_BOTH.json  SAFE_10_0_ALLMUT.json  SAFE_10_2_AND_2_1.json  SAFE_10_2_BOTH.json  SAFE_2_1_TRANSITION.json  SAFE_5_1_BOTH.json  UNSAFE_100_0_ALLMUT.json  UNSAFE_100_10_BOTH.json  UNSAFE_10_0_ALLMUT.json  UNSAFE_10_2_BOTH.json  UNSAFE_5_0_ALLMUT.json  UNSAFE_5_1_BOTH.json  UNSAFE_5_2_BOTH.json
scenarios/2_polling_1_record/: 1000_10_ALL_MUT.json  100_5_ALL.json  100_5_ALL_MUT.json  10_2_ALL_MUT.json
scenarios/long_running/: SAFE_1000_0_ALLMUT.json  UNSAFE_1000_0_ALLMUT.json
src/: config.rs  intervals.rs  main.rs  messages.rs  observations.rs  ordering.rs  predicates.rs  processing.rs  simulate.rs  simulations.rs  utils.rs  value.rs
src/core/: ordering.rs
(+57 files in other folders)
