
[package]
name = "synchro"
version = "0.1.0"
edition = "2024"


[dependencies]
nexosim = "0.3.1"
rand = "0.9.0"
rand_distr = "0.5.1"
chrono = "0.4.40"
squareup = "2.12.3"
tai-time = {version = "0.3.3", features = ["chrono"]}
log = "0.4.26"
log4rs = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
colog = "1.3.0"
clap = { version = "4.5.31", features = ["derive"] }